// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard does not render 'Select someone to chat with' when there is an active chat 1`] = `
<div>
  <main
    class="relative pr-[1px] h-full"
  >
    <nav
      class="flex justify-center gap-5 p-2 absolute z-50 right-2"
    >
      <a
        class="btn btn-sm btn-secondary btn-outline"
        href="/1"
      >
        Dashboard
      </a>
      <button
        class="btn btn-sm btn-accent"
      >
        Logout
      </button>
    </nav>
    <div
      class="cs-main-container h-screen min-h-[700px]"
    >
      <div
        class="cs-sidebar cs-sidebar--left"
      >
        <div
          class="flex justify-center items-center bg-slate-200 h-20"
        >
          <p>
            User1
          </p>
        </div>
        <div>
          No users found
        </div>
      </div>
      <div
        class="cs-chat-container"
      >
        <div
          class="cs-conversation-header mb-2"
        >
          <div
            class="cs-conversation-header__content"
          >
            <div
              class="cs-conversation-header__user-name"
            >
              User2
            </div>
            <div
              class="cs-conversation-header__info"
            />
          </div>
        </div>
        <div
          class="cs-message-list"
        >
          <div
            class="scrollbar-container cs-message-list__scroll-wrapper ps"
            data-cs-message-list=""
          >
            <div
              class="items-center flex justify-center w-full my-2"
            >
              <div
                class="btn btn-neutral btn-outline btn-wide"
              >
                Say Hi!
              </div>
            </div>
            <div
              class="cs-message-list__scroll-to"
            />
            <div
              class="ps__rail-x"
              style="left: 0px; top: 0px;"
            >
              <div
                class="ps__thumb-x"
                style="left: 0px; width: 0px;"
                tabindex="0"
              />
            </div>
            <div
              class="ps__rail-y"
              style="top: 0px; left: 0px;"
            >
              <div
                class="ps__thumb-y"
                style="top: 0px; height: 0px;"
                tabindex="0"
              />
            </div>
          </div>
        </div>
        <div
          class="cs-message-input"
        >
          <div
            class="cs-message-input__content-editor-wrapper"
          >
            <div
              class="scrollbar-container cs-message-input__content-editor-container ps"
            >
              <div
                class="cs-message-input__content-editor"
                contenteditable="true"
                data-placeholder="Type message here"
              />
              <div
                class="ps__rail-x"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="ps__thumb-x"
                  style="left: 0px; width: 0px;"
                  tabindex="0"
                />
              </div>
              <div
                class="ps__rail-y"
                style="top: 0px; left: 0px;"
              >
                <div
                  class="ps__thumb-y"
                  style="top: 0px; height: 0px;"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
          <div
            class="cs-message-input__tools"
          >
            <button
              class="cs-button cs-button--send"
              disabled=""
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-paper-plane fa-w-16 "
                data-icon="paper-plane"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M476 3.2L12.5 270.6c-18.1 10.4-15.8 35.6 2.2 43.2L121 358.4l287.3-253.2c5.5-4.9 13.3 2.6 8.6 8.3L176 407v80.5c0 23.6 28.5 32.9 42.5 15.8L282 426l124.6 52.2c14.2 6 30.4-2.9 33-18.2l72-432C515 7.8 493.3-6.8 476 3.2z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Dashboard renders correctly and fetches all users 1`] = `
<div>
  <main
    class="relative pr-[1px] h-full"
  >
    <nav
      class="flex justify-center gap-5 p-2 absolute z-50 right-2"
    >
      <a
        class="btn btn-sm btn-secondary btn-outline"
        href="/1"
      >
        Dashboard
      </a>
      <button
        class="btn btn-sm btn-accent"
      >
        Logout
      </button>
    </nav>
    <div
      class="cs-main-container h-screen min-h-[700px]"
    >
      <div
        class="cs-sidebar cs-sidebar--left"
      >
        <div
          class="flex justify-center items-center bg-slate-200 h-20"
        >
          <p>
            User1
          </p>
        </div>
        <div
          class="cs-conversation-list"
        >
          <div
            class="scrollbar-container ps"
          >
            <ul>
              <li>
                <div
                  class="cs-conversation  my-2"
                >
                  <div
                    class="cs-conversation__content"
                  >
                    <div
                      class="cs-conversation__name"
                    >
                      Test User2
                    </div>
                    <div
                      class="cs-conversation__info"
                    />
                  </div>
                </div>
              </li>
            </ul>
            <div
              class="ps__rail-x"
              style="left: 0px; top: 0px;"
            >
              <div
                class="ps__thumb-x"
                style="left: 0px; width: 0px;"
                tabindex="0"
              />
            </div>
            <div
              class="ps__rail-y"
              style="top: 0px; left: 0px;"
            >
              <div
                class="ps__thumb-y"
                style="top: 0px; height: 0px;"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full items-center flex justify-center"
      >
        <div>
          Select someone to chat with
        </div>
      </div>
    </div>
  </main>
</div>
`;
